@@ -1,8 +1,8 @@
 /*
- * Copyright (c) 2002-2017 "Neo Technology,"
- * Network Engine for Objects in Lund AB [http://neotechnology.com]
+ * Copyright (c) 2002-2020 "Neo4j,"
+ * Neo4j Sweden AB [http://neo4j.com]
  *
- * This file is part of Neo4j Spatial.Spatial.
+ * This file is part of Neo4j Spatial.
  *
  * Neo4j is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -19,29 +19,25 @@
  */
 package org.neo4j.gis.spatial;
 
-import java.util.*;
-
-import com.vividsolutions.jts.geom.PrecisionModel;
-import org.geotools.factory.FactoryRegistryException;
-import org.geotools.referencing.CRS;
-import org.geotools.referencing.ReferencingFactoryFinder;
+import org.locationtech.jts.geom.Geometry;
+import org.locationtech.jts.geom.GeometryFactory;
+import org.locationtech.jts.geom.PrecisionModel;
+import org.neo4j.gis.spatial.attributes.PropertyMappingManager;
+import org.neo4j.gis.spatial.encoders.Configurable;
+import org.neo4j.gis.spatial.index.IndexManager;
 import org.neo4j.gis.spatial.index.LayerIndexReader;
 import org.neo4j.gis.spatial.index.LayerRTreeIndex;
 import org.neo4j.gis.spatial.index.SpatialIndexWriter;
 import org.neo4j.gis.spatial.rtree.Envelope;
 import org.neo4j.gis.spatial.rtree.Listener;
 import org.neo4j.gis.spatial.rtree.filter.SearchFilter;
-import org.neo4j.gis.spatial.attributes.PropertyMappingManager;
-import org.neo4j.gis.spatial.encoders.Configurable;
+import org.neo4j.gis.spatial.utilities.GeotoolsAdapter;
 import org.neo4j.graphdb.Direction;
-import org.neo4j.graphdb.GraphDatabaseService;
 import org.neo4j.graphdb.Node;
 import org.neo4j.graphdb.Transaction;
-import org.opengis.referencing.FactoryException;
 import org.opengis.referencing.crs.CoordinateReferenceSystem;
 
-import com.vividsolutions.jts.geom.Geometry;
-import com.vividsolutions.jts.geom.GeometryFactory;
+import java.util.*;
 
 /**
  * Instances of Layer provide the ability for developers to add/remove and edit
@@ -50,24 +46,18 @@ import com.vividsolutions.jts.geom.GeometryFactory;
  * sub-graph (geometries describe by the graph). A Layer can be associated with
  * a dataset. In cases where the dataset contains only one layer, the layer
  * itself is the dataset.
- * 
- * You should not construct the DefaultLayer directly, but use the included
- * factor methods for creating layers based on configurations. This will
- * instantiate the appropriate class correctly. See the methods
- * makeLayerFromNode and makeLayerInstance.
+ * <p>
+ * You should not construct the DefaultLayer directly, but use the factory methods
+ * on the SpatialDatabaseService for correct initialization.
  */
 public class DefaultLayer implements Constants, Layer, SpatialDataset {
 
     // Public methods
-    
+
     public String getName() {
         return name;
     }
 
-    public SpatialDatabaseService getSpatialDatabase() {
-        return spatialDatabase;
-    }
-    
     public LayerIndexReader getIndex() {
         return indexReader;
     }
@@ -79,26 +69,26 @@ public class DefaultLayer implements Constants, Layer, SpatialDataset {
     /**
      * Add the geometry encoded in the given Node. This causes the geometry to appear in the index.
      */
-    public SpatialDatabaseRecord add(Node geomNode) {
-    	Geometry geometry = getGeometryEncoder().decodeGeometry(geomNode);
+    public SpatialDatabaseRecord add(Transaction tx, Node geomNode) {
+        Geometry geometry = getGeometryEncoder().decodeGeometry(geomNode);
 
         // add BBOX to Node if it's missing
         getGeometryEncoder().ensureIndexable(geometry, geomNode);
 
-        indexWriter.add(geomNode);
+        indexWriter.add(tx, geomNode);
         return new SpatialDatabaseRecord(this, geomNode, geometry);
     }
 
     @Override
-    public int addAll(List<Node> geomNodes) {
+    public int addAll(Transaction tx, List<Node> geomNodes) {
         GeometryEncoder geometryEncoder = getGeometryEncoder();
 
         for (Node geomNode : geomNodes) {
             Geometry geometry = geometryEncoder.decodeGeometry(geomNode);
             // add BBOX to Node if it's missing
-            geometryEncoder.encodeGeometry(geometry, geomNode);
+            geometryEncoder.encodeGeometry(tx, geometry, geomNode);
         }
-        indexWriter.add(geomNodes);
+        indexWriter.add(tx, geomNodes);
         return geomNodes.size();
     }
 
@@ -106,43 +96,39 @@ public class DefaultLayer implements Constants, Layer, SpatialDataset {
         return geometryFactory;
     }
 
-    public void setCoordinateReferenceSystem(CoordinateReferenceSystem crs) {
-        Node layerNode = getLayerNode();
+    public void setCoordinateReferenceSystem(Transaction tx, CoordinateReferenceSystem crs) {
+        Node layerNode = getLayerNode(tx);
         layerNode.setProperty(PROP_CRS, crs.toWKT());
-    }   
-    
-    public CoordinateReferenceSystem getCoordinateReferenceSystem() {
-        Node layerNode = getLayerNode();
+    }
+
+    public CoordinateReferenceSystem getCoordinateReferenceSystem(Transaction tx) {
+        Node layerNode = getLayerNode(tx);
         if (layerNode.hasProperty(PROP_CRS)) {
-            try {
-                return ReferencingFactoryFinder.getCRSFactory(null).createFromWKT((String) layerNode.getProperty(PROP_CRS));
-            } catch (FactoryRegistryException | FactoryException e) {
-                throw new SpatialDatabaseException(e);
-            }
+            return GeotoolsAdapter.getCRS((String) layerNode.getProperty(PROP_CRS));
         } else {
             return null;
         }
     }
 
-    public void setGeometryType(int geometryType) {
-        Node layerNode = getLayerNode();
+    public void setGeometryType(Transaction tx, int geometryType) {
+        Node layerNode = getLayerNode(tx);
         if (geometryType < GTYPE_POINT || geometryType > GTYPE_MULTIPOLYGON) {
             throw new IllegalArgumentException("Unknown geometry type: " + geometryType);
         }
 
         layerNode.setProperty(PROP_TYPE, geometryType);
     }
-    
-    public Integer getGeometryType() {
-        Node layerNode = getLayerNode();
+
+    public Integer getGeometryType(Transaction tx) {
+        Node layerNode = getLayerNode(tx);
         if (layerNode.hasProperty(PROP_TYPE)) {
             return (Integer) layerNode.getProperty(PROP_TYPE);
         } else {
             GuessGeometryTypeSearch geomTypeSearch = new GuessGeometryTypeSearch();
-            indexReader.searchIndex(geomTypeSearch).count();
-	    
-	    // returns null for an empty layer!
-	    return geomTypeSearch.firstFoundType;
+            indexReader.searchIndex(tx, geomTypeSearch).count();
+
+            // returns null for an empty layer!
+            return geomTypeSearch.firstFoundType;
         }
     }
 
@@ -156,100 +142,91 @@ public class DefaultLayer implements Constants, Layer, SpatialDataset {
         }
 
         @Override
-    	public boolean geometryMatches(Node geomNode) {
+        public boolean geometryMatches(Transaction tx, Node geomNode) {
             if (firstFoundType == null) {
                 firstFoundType = (Integer) geomNode.getProperty(PROP_TYPE);
             }
-            
+
             return false;
         }
     }
 
-    public String[] getExtraPropertyNames() {
-        Node layerNode = getLayerNode();
-		try (Transaction tx = layerNode.getGraphDatabase().beginTx()) {
-			String[] extraPropertyNames;
-			if (layerNode.hasProperty(PROP_LAYERNODEEXTRAPROPS)) {
-				extraPropertyNames = (String[]) layerNode.getProperty(PROP_LAYERNODEEXTRAPROPS);
-			} else {
-				extraPropertyNames = new String[] {};
-			}
-			tx.success();
-			return extraPropertyNames;
-		}
-    }
-    
-    public void setExtraPropertyNames(String[] names) {
-        try (Transaction tx = getDatabase().beginTx()) {
-            getLayerNode().setProperty(PROP_LAYERNODEEXTRAPROPS, names);
-            tx.success();
+    public String[] getExtraPropertyNames(Transaction tx) {
+        Node layerNode = getLayerNode(tx);
+        String[] extraPropertyNames;
+        if (layerNode.hasProperty(PROP_LAYERNODEEXTRAPROPS)) {
+            extraPropertyNames = (String[]) layerNode.getProperty(PROP_LAYERNODEEXTRAPROPS);
+        } else {
+            extraPropertyNames = new String[]{};
         }
+        return extraPropertyNames;
     }
-    
-    void mergeExtraPropertyNames(String[] names) {
-        Node layerNode = getLayerNode();
+
+    public void setExtraPropertyNames(String[] names, Transaction tx) {
+        getLayerNode(tx).setProperty(PROP_LAYERNODEEXTRAPROPS, names);
+    }
+
+    void mergeExtraPropertyNames(Transaction tx, String[] names) {
+        Node layerNode = getLayerNode(tx);
         if (layerNode.hasProperty(PROP_LAYERNODEEXTRAPROPS)) {
             String[] actualNames = (String[]) layerNode.getProperty(PROP_LAYERNODEEXTRAPROPS);
-            
+
             Set<String> mergedNames = new HashSet<>();
             Collections.addAll(mergedNames, names);
             Collections.addAll(mergedNames, actualNames);
 
-            layerNode.setProperty(PROP_LAYERNODEEXTRAPROPS, mergedNames.toArray(new String[mergedNames.size()]));
+            layerNode.setProperty(PROP_LAYERNODEEXTRAPROPS, mergedNames.toArray(new String[0]));
         } else {
             layerNode.setProperty(PROP_LAYERNODEEXTRAPROPS, names);
         }
     }
-    
-	/**
-	 * The constructor is protected because we should not construct this class
-	 * directly, but use the factory methods to create Layers based on
-	 * configurations
-	 */
-	protected DefaultLayer() {
-	}
 
-    public void initialize(SpatialDatabaseService spatialDatabase, String name, Node layerNode) {
-        this.spatialDatabase = spatialDatabase;
+    /**
+     * The constructor is protected because we should not construct this class
+     * directly, but use the factory methods to create Layers based on
+     * configurations
+     */
+    protected DefaultLayer() {
+    }
+
+    @Override
+    public void initialize(Transaction tx, IndexManager indexManager, String name, Node layerNode) {
+        //this.spatialDatabase = spatialDatabase;
         this.name = name;
-        this.layerNode = layerNode;
+        this.layerNodeId = layerNode.getId();
 
         this.geometryFactory = new GeometryFactory();
-        CoordinateReferenceSystem crs = getCoordinateReferenceSystem();
+        CoordinateReferenceSystem crs = getCoordinateReferenceSystem(tx);
         if (crs != null) {
             // TODO: Verify this code works for general cases to read SRID from layer properties and use them to construct GeometryFactory
-            try {
-                Integer code = CRS.lookupEpsgCode(crs, true);
-                if (code != null) {
-                    this.geometryFactory = new GeometryFactory(new PrecisionModel(), code);
-                }
-            } catch (FactoryException e) {
-                System.err.println("Failed to lookup CRS: " + e.getMessage());
+            Integer code = GeotoolsAdapter.getEPSGCode(crs);
+            if (code != null) {
+                this.geometryFactory = new GeometryFactory(new PrecisionModel(), code);
             }
         }
 
         if (layerNode.hasProperty(PROP_GEOMENCODER)) {
             String encoderClassName = (String) layerNode.getProperty(PROP_GEOMENCODER);
             try {
-                this.geometryEncoder = (GeometryEncoder) Class.forName(encoderClassName).newInstance();
+                this.geometryEncoder = (GeometryEncoder) Class.forName(encoderClassName).getDeclaredConstructor().newInstance();
             } catch (Exception e) {
                 throw new SpatialDatabaseException(e);
             }
-			if (this.geometryEncoder instanceof Configurable) {
-				if (layerNode.hasProperty(PROP_GEOMENCODER_CONFIG)) {
-					((Configurable) this.geometryEncoder).setConfiguration((String) layerNode.getProperty(PROP_GEOMENCODER_CONFIG));
-				}
-			}
+            if (this.geometryEncoder instanceof Configurable) {
+                if (layerNode.hasProperty(PROP_GEOMENCODER_CONFIG)) {
+                    ((Configurable) this.geometryEncoder).setConfiguration((String) layerNode.getProperty(PROP_GEOMENCODER_CONFIG));
+                }
+            }
         } else {
             this.geometryEncoder = new WKBGeometryEncoder();
         }
         this.geometryEncoder.init(this);
-        
+
         // index must be created *after* geometryEncoder
         if (layerNode.hasProperty(PROP_INDEX_CLASS)) {
             String indexClass = (String) layerNode.getProperty(PROP_INDEX_CLASS);
             try {
-                Object index = Class.forName(indexClass).newInstance();
+                Object index = Class.forName(indexClass).getDeclaredConstructor().newInstance();
                 this.indexReader = (LayerIndexReader) index;
                 this.indexWriter = (SpatialIndexWriter) index;
             } catch (Exception e) {
@@ -265,43 +242,40 @@ public class DefaultLayer implements Constants, Layer, SpatialDataset {
             this.indexReader = index;
             this.indexWriter = index;
         }
-        this.indexReader.init(this);
+        this.indexReader.init(tx, indexManager, this);
     }
 
     /**
      * All layers are associated with a single node in the database. This node will have properties,
      * relationships (sub-graph) or both to describe the contents of the layer
      */
-    public Node getLayerNode() {
-        return layerNode;
+    public Node getLayerNode(Transaction tx) {
+        return tx.getNodeById(layerNodeId);
     }
-    
+
     /**
      * Delete Layer
      */
-    public void delete(Listener monitor) {
-        indexWriter.removeAll(true, monitor);
-
-        try (Transaction tx = getDatabase().beginTx()) {
-            Node layerNode = getLayerNode();
-            layerNode.getSingleRelationship(SpatialRelationshipTypes.LAYER, Direction.INCOMING).delete();
-            layerNode.delete();
-            tx.success();
-        }
+    public void delete(Transaction tx, Listener monitor) {
+        indexWriter.removeAll(tx, true, monitor);
+        Node layerNode = getLayerNode(tx);
+        layerNode.getSingleRelationship(SpatialRelationshipTypes.LAYER, Direction.INCOMING).delete();
+        layerNode.delete();
+        layerNodeId = -1L;
     }
 
     // Private methods
-    
-    protected GraphDatabaseService getDatabase() {
-        return spatialDatabase.getDatabase();
-    }
-    
-    
+
+//    protected GraphDatabaseService getDatabase() {
+//        return spatialDatabase.getDatabase();
+//    }
+
+
     // Attributes
-    
-    private SpatialDatabaseService spatialDatabase;
+
+    //private SpatialDatabaseService spatialDatabase;
     private String name;
-    protected Node layerNode;
+    protected Long layerNodeId = -1L;
     private GeometryEncoder geometryEncoder;
     private GeometryFactory geometryFactory;
     protected LayerIndexReader indexReader;
@@ -311,34 +285,33 @@ public class DefaultLayer implements Constants, Layer, SpatialDataset {
         return this;
     }
 
-    public Iterable<Node> getAllGeometryNodes() {
-        return indexReader.getAllIndexedNodes();
+    public Iterable<Node> getAllGeometryNodes(Transaction tx) {
+        return indexReader.getAllIndexedNodes(tx);
     }
 
-    public boolean containsGeometryNode(Node geomNode) {
-        return indexReader.isNodeIndexed(geomNode.getId());
+    @Override
+    public boolean containsGeometryNode(Transaction tx, Node geomNode) {
+        return indexReader.isNodeIndexed(tx, geomNode.getId());
     }
 
     /**
      * Provides a method for iterating over all geometries in this dataset. This is similar to the
      * getAllGeometryNodes() method but internally converts the Node to a Geometry.
-     * 
+     *
      * @return iterable over geometries in the dataset
      */
-    public Iterable<? extends Geometry> getAllGeometries() {
-        return new NodeToGeometryIterable(getAllGeometryNodes());
+    public Iterable<? extends Geometry> getAllGeometries(Transaction tx) {
+        return new NodeToGeometryIterable(getAllGeometryNodes(tx));
     }
-    
+
     /**
      * In order to wrap one iterable or iterator in another that converts the objects from one type
      * to another without loading all into memory, we need to use this ugly java-magic. Man, I miss
      * Ruby right now!
-     * 
-     * @author craig
-     * @since 1.0.0
      */
-    private class NodeToGeometryIterable implements Iterable<Geometry>  {
-        private Iterator<Node> allGeometryNodeIterator;
+    private class NodeToGeometryIterable implements Iterable<Geometry> {
+        private final Iterator<Node> allGeometryNodeIterator;
+
         private class GeometryIterator implements Iterator<Geometry> {
 
             public boolean hasNext() {
@@ -351,8 +324,9 @@ public class DefaultLayer implements Constants, Layer, SpatialDataset {
 
             public void remove() {
             }
-            
+
         }
+
         NodeToGeometryIterable(Iterable<Node> allGeometryNodes) {
             this.allGeometryNodeIterator = allGeometryNodes.iterator();
         }
@@ -360,13 +334,13 @@ public class DefaultLayer implements Constants, Layer, SpatialDataset {
         public Iterator<Geometry> iterator() {
             return new GeometryIterator();
         }
-        
+
     }
 
     /**
      * Return the geometry encoder used by this SpatialDataset to convert individual geometries to
      * and from the database structure.
-     * 
+     *
      * @return GeometryEncoder for this dataset
      */
     public GeometryEncoder getGeometryEncoder() {
@@ -375,33 +349,33 @@ public class DefaultLayer implements Constants, Layer, SpatialDataset {
 
     /**
      * This dataset contains only one layer, itself.
-     * 
+     *
      * @return iterable over all Layers that can be viewed from this dataset
      */
-    public Iterable< ? extends Layer> getLayers() {
+    public Iterable<? extends Layer> getLayers() {
         return Collections.singletonList(this);
     }
 
-	/**
-	 * Override this method to provide a style if your layer wishes to control
-	 * its own rendering in the GIS. If a Style is returned, it is used. If a
-	 * File is returned, it is opened and assumed to contain SLD contents. If a
-	 * String is returned, it is assumed to contain SLD contents.
-	 * 
-	 * @return null
-	 */
-	public Object getStyle() {
-		return null;
-	}
+    /**
+     * Override this method to provide a style if your layer wishes to control
+     * its own rendering in the GIS. If a Style is returned, it is used. If a
+     * File is returned, it is opened and assumed to contain SLD contents. If a
+     * String is returned, it is assumed to contain SLD contents.
+     *
+     * @return null
+     */
+    public Object getStyle() {
+        return null;
+    }
 
-	private PropertyMappingManager propertyMappingManager;
+    private PropertyMappingManager propertyMappingManager;
 
-	@Override
-	public PropertyMappingManager getPropertyMappingManager() {
-		if (propertyMappingManager == null) {
-			propertyMappingManager = new PropertyMappingManager(this);
-		}
-		return propertyMappingManager;
-	}
+    @Override
+    public PropertyMappingManager getPropertyMappingManager() {
+        if (propertyMappingManager == null) {
+            propertyMappingManager = new PropertyMappingManager(this);
+        }
+        return propertyMappingManager;
+    }
 
 }
